<resources>
    <!--Labels in manifest folder. Activity titles-->
    <string name="app_name">Sprint LT</string>
    <string name="session_activity">Sessions</string>
    <string name="lap_activity">Laps</string>
    <string name="record_activity">Record</string>
    <string name="action_settings">Settings</string>

    <!-- - - - - - - - - - - - - - - -
          - Used by Preferences  -
          - - - - - - - - - - - - - - - -->

    <!-- Label for the driver preference -->
    <string name="pref_driver_label">Driver Name</string>
    <!-- Key name for storing driver name in SharedPreferences -->
    <string name="pref_driver_key" translatable="false">driver</string>
    <!-- Default for driver preference -->
    <string name="pref_driver_default" translatable="false">Default Driver</string>


    <!-- Label for the track preference -->
    <string name="pref_track_label">Select Track</string>

    <!-- Label for wgi track preference -->
    <string name="pref_track_label_wgi">Watkins Glen International</string>
    <!-- Label for ctmp track preference -->
    <string name="pref_track_label_ctmp">Canadian Tire Motorsports Park</string>
    <!-- Label for calabogie track preference -->
    <string name="pref_track_label_bogie">Calabogie Motorsports Park</string>
    !-- Label for test track preference -->
    <string name="pref_track_label_test">Sprint Test Track</string>

    <!-- Key name for track preference in SharedPreferences -->
    <string name="pref_track_key" translatable="false">track</string>
    <string name="pref_track_default" translatable="false">Watkins Glen International</string>

    <!-- Value in SharedPreferences for wgi track option -->
    <string name="pref_track_wgi_value" translatable="false">wgi</string>
    <!-- Value in SharedPreferences for ctmp track option -->
    <string name="pref_track_ctmp_value" translatable="false">ctmp</string>
    <!-- Value in SharedPreferences for cmp track option -->
    <string name="pref_track_bogie_value" translatable="false">bogie</string>
    <!-- Value in SharedPreferences for test track option -->
    <string name="pref_track_test_value" translatable="false">test</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_navigation">Navigation</string>

    <!-- STRINGS FOR CUSTOM TRACK DATA PREFERENCE -->
    <string name="trackdatapreference">Select Track</string>
    <string name="trackdatapreference_summary">Please select your track from the list below</string>


</resources>
