<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_driver_default"
        android:key="@string/pref_driver_key"
        android:title="@string/pref_driver_label" />

    <ListPreference
        android:defaultValue="@string/pref_track_wgi_value"
        android:entries="@array/pref_track_option_labels"
        android:entryValues="@array/pref_track_option_values"
        android:key="@string/pref_track_key"
        android:title="@string/pref_track_label" />

    <com.sn1006.atkins.sprint.preference.TrackDataPreference
        android:defaultValue="wgi"
        android:key="pref_trackdatapreference"
        android:title="@string/trackdatapreference"
        android:summary="@string/trackdatapreference_summary" />

</PreferenceScreen>